# whatt

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml  release.yml
