[project]
name = "watt"
version = "0.1.0"
description = "A KDE system tray widget that displays real-time battery power consumption in Watts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
